# helpohelpo

./: .codiumai.toml  .deepsource.toml  .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  coverage.xml  deepsource.sh  deploy_pdoc_documentation.sh  old_pyproject.toml  pyproject.toml  requirements.txt  test_version_upgrade.delme
.github/workflows/: publish.yml
docs/: 404.html  index.html  search.html  sitemap.xml
docs/reference/helpers/: index.html
docs/reference/helpers/aws_general/: index.html
docs/reference/helpers/check_env_vars/: index.html
docs/reference/helpers/data_structure_search/: index.html
docs/reference/helpers/date_tools/: index.html
docs/reference/helpers/dateframe_tools/: index.html
docs/reference/helpers/dynamic_loader/: index.html
docs/reference/helpers/file_tools/: index.html
docs/reference/helpers/os_functions/: index.html
docs/search/: search_index.json
helpo/: aws_general.py  check_env_vars.py  data_structure_search.py  dataframe_tools.py  date_tools.py  dateframe_tools.py  dynamic_loader.py  hdatetime.py  hfile.py  hstrops.py  hsubprocess.py  os_functions.py  plotter_tools.py  string_tools.py
helpo/old/: data_structure_search.py  os_functions.py
scrap/: aws_general.py  dynamic_loader.py  plotter_tools.py
tests/: test_date_tools.py
tests/hcollections/: test_clean_list_via_rm_patts.py
tests/hstrops/: test_clean_list_via_rm_patts.py  test_get_lines_between_tag_and_blank_line.py  test_get_multiblocks_between_tags.py  test_norm_key.py  test_returns_lines_between_tags.py  test_rreplace.py
(+2 files in other folders)
