[tool.poetry]
name = "helpohelpo"
version = "0.2.0"
description = "A library of python helpers"
authors = ["Stablecaps <114529342+darkpandarts@users.noreply.github.com>"]
license = "LICENSE"
readme = "README.md"
keywords=[
    "python3",
    "helpers",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "helpo"}]

[tool.poetry.dependencies]
python = "^3.8"


# [tool.poetry.group.test.dependencies]
# pytest = "^7.2.2"
# requests-mock = "^1.10.0"
python-semantic-release = "^8.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[tool.poetry.urls]
"Homepage" = "https://github.com/stablecaps/helpohelpo"
"Bug Tracker" = "https://github.com/stablecaps/helpohelpo/issues"